--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,16 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+::-webkit-scrollbar{
+  height: 5px;
+  width: 8px
+}
+::-webkit-scrollbar-track{
+  background: #f7f7f7;
+  border-radius:10px;
+}
+::-webkit-scrollbar-thumb{
+  background:#e3e3e3;
+  border-radius: 10px;
+}
